--- a/demo-app/gradle/libs.versions.toml
+++ b/demo-app/gradle/libs.versions.toml
@@ -5,6 +5,9 @@ junit = "5.13.3"
 spotless = "7.1.0"
 kotlin = "2.2.0"
 navigation-compose = "2.7.7"
+opentelemetry-kotlin-api = "0.1.1"
+opentelemetry-kotlin-api-ext = "0.1.1"
+compat-kotlin-to-official = "0.1.1"
 
 [libraries]
 androidx-appcompat = "androidx.appcompat:appcompat:1.7.1"
@@ -39,6 +42,9 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation-compose" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation-compose" }
 androidx-navigation-compose = {group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose"}
+opentelemetry-kotlin-api = { group = "io.embrace.opentelemetry.kotlin", name = "opentelemetry-kotlin-api", version.ref = "opentelemetry-kotlin-api" }
+opentelemetry-kotlin-api-ext = { group = "io.embrace.opentelemetry.kotlin", name = "opentelemetry-kotlin-api-ext", version.ref = "opentelemetry-kotlin-api-ext" }
+compat-kotlin-to-official = { group = "io.embrace.opentelemetry.kotlin", name = "compat-kotlin-to-official", version.ref = "compat-kotlin-to-official" }
 
 [bundles]
 junit = ["junit-jupiter-api", "junit-jupiter-engine", "junit-vintage-engine"]
